feat: connected to supabase

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Client-side variables
+# Required for browser Supabase reads/writes in Phase 1.
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Server-side variables
+# Not used by current UI flows, but reserved for server routes and extraction pipeline.
 SUPABASE_SERVICE_ROLE_KEY=
 FIRECRAWL_API_KEY=
-
